// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreedCard should match the correct snapshot 1`] = `
<div
  className="BreedCard-container activeCard"
  name="Siberian Husky"
  onClick={[Function]}
>
  <div
    className="breed-card-header"
  >
    Siberian Husky
  </div>
  <div
    className="img-container"
  >
    <img
      alt="dog"
      className="breed-img"
      src="siberian-husky.jpg"
    />
  </div>
  <ReactTooltip
    className="pref-span"
    clickable={false}
    effect="solid"
    getContent={[Function]}
    id="pref"
    insecure={true}
    place="bottom"
    resizeHide={true}
    type="info"
    wrapper="div"
  />
  <div
    className="breed-attr"
  >
    <div
      className="pref-container"
    >
      <i
        className="fas fa-snowflake"
        data-for="pref"
        data-tip="Requires cold climate"
      />
    </div>
    <div
      className="pref-container"
    >
      <i
        className="fas fa-mountain"
        data-for="pref"
        data-tip="Loves hiking"
      />
    </div>
    <div
      className="pref-container"
    >
      <i
        className="fas fa-running"
        data-for="pref"
        data-tip="Loves running"
      />
    </div>
  </div>
</div>
`;

exports[`BreedCard should match the correct snapshot 2`] = `
<div
  className="BreedCard-container activeCard"
  name="Siberian Husky"
  onClick={[Function]}
>
  <div
    className="breed-card-header"
  >
    Siberian Husky
  </div>
  <div
    className="img-container"
  >
    <img
      alt="dog"
      className="breed-img"
      src="siberian-husky.jpg"
    />
  </div>
  <ReactTooltip
    className="pref-span"
    clickable={false}
    effect="solid"
    getContent={[Function]}
    id="pref"
    insecure={true}
    place="bottom"
    resizeHide={true}
    type="info"
    wrapper="div"
  />
  <div
    className="breed-attr"
  >
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`BreedCard should match the correct snapshot 3`] = `
<div
  className="BreedCard-container activeCard"
  name="Siberian Husky"
  onClick={[Function]}
>
  <div
    className="breed-card-header"
  >
    Siberian Husky
  </div>
  <div
    className="img-container"
  >
    <img
      alt="dog"
      className="breed-img"
      src="siberian-husky.jpg"
    />
  </div>
  <ReactTooltip
    className="pref-span"
    clickable={false}
    effect="solid"
    getContent={[Function]}
    id="pref"
    insecure={true}
    place="bottom"
    resizeHide={true}
    type="info"
    wrapper="div"
  />
  <div
    className="breed-attr"
  >
    <div
      className="pref-container"
    >
      <i
        className="fas fa-snowflake"
        data-for="pref"
        data-tip="Requires cold climate"
      />
    </div>
    <div
      className="pref-container"
    >
      <i
        className="fas fa-mountain"
        data-for="pref"
        data-tip="Loves hiking"
      />
    </div>
    <div
      className="pref-container"
    >
      <i
        className="fas fa-running"
        data-for="pref"
        data-tip="Loves running"
      />
    </div>
  </div>
</div>
`;

exports[`BreedCard should match the correct snapshot 4`] = `
<div
  className="BreedCard-container "
  name="Siberian Husky"
  onClick={[Function]}
>
  <div
    className="breed-card-header"
  >
    Siberian Husky
  </div>
  <div
    className="img-container"
  >
    <img
      alt="dog"
      className="breed-img"
      src="siberian-husky.jpg"
    />
  </div>
  <ReactTooltip
    className="pref-span"
    clickable={false}
    effect="solid"
    getContent={[Function]}
    id="pref"
    insecure={true}
    place="bottom"
    resizeHide={true}
    type="info"
    wrapper="div"
  />
  <div
    className="breed-attr"
  >
    <div
      className="pref-container"
    >
      <i
        className="fas fa-snowflake"
        data-for="pref"
        data-tip="Requires cold climate"
      />
    </div>
    <div
      className="pref-container"
    >
      <i
        className="fas fa-mountain"
        data-for="pref"
        data-tip="Loves hiking"
      />
    </div>
    <div
      className="pref-container"
    >
      <i
        className="fas fa-running"
        data-for="pref"
        data-tip="Loves running"
      />
    </div>
  </div>
</div>
`;

exports[`BreedCard should match the correct snapshot when the path is not "/about-breeds"  1`] = `
<div
  className="BreedCard-container activeCard"
  name="Siberian Husky"
  onClick={[Function]}
>
  <div
    className="breed-card-header"
  >
    Siberian Husky
  </div>
  <div
    className="img-container"
  >
    <img
      alt="dog"
      className="breed-img"
      src="siberian-husky.jpg"
    />
  </div>
  <ReactTooltip
    className="pref-span"
    clickable={false}
    effect="solid"
    getContent={[Function]}
    id="pref"
    insecure={true}
    place="bottom"
    resizeHide={true}
    type="info"
    wrapper="div"
  />
  <div
    className="breed-attr"
  >
    <div
      className="pref-container"
    >
      <i
        className="fas fa-snowflake"
        data-for="pref"
        data-tip="Requires cold climate"
      />
    </div>
    <div
      className="pref-container"
    >
      <i
        className="fas fa-mountain"
        data-for="pref"
        data-tip="Loves hiking"
      />
    </div>
    <div
      className="pref-container"
    >
      <i
        className="fas fa-running"
        data-for="pref"
        data-tip="Loves running"
      />
    </div>
  </div>
</div>
`;
